--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Keen Casa</a>
+      <a class="navbar-brand" href="#"><img src="images/logo.png" width="auto" height="70px"</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,6 +52,7 @@
           </ul>
         </li>
       </ul>
+      <img class="pull-right avatar" src="images/avatar.png" width="80px" height="80px">
       <h3 class="pull-right">Susan's Account</h3>
     
     </div><!-- /.navbar-collapse -->
@@ -60,13 +61,12 @@
 
 <div class="jumbotron">
   <h2>Welcome Back Susan!</h2>
-  <h1>Looking Good!</h1>
+  <h1>Everything is Working!</h1>
 </div>
 <container>
   <row>
     <div class="btn-group-vertical pull-left col-sm-3">
-        <button type="button" class="btn btn-default">Alerts</button>
-        <button type="button" class="btn btn-default">You have a leak<i class="fa fa-2x fa-exclamation-triangle pull-right medium-alert"></i></button>
+        <button type="button" class="btn btn-default primary">Alerts</button>
         <button type="button" class="btn btn-default">Unusually high water usage<i class="fa fa-2x fa-exclamation-triangle pull-right low-alert"></i></button>
         <button type="button" class="btn btn-default">Replace you water filter <i class="fa fa-2x fa-exclamation-triangle pull-right low-alert"></i></button>
         <button type="button" class="btn btn-default">Replace lightbulb in refrigerator<i class="fa fa-2x fa-exclamation-triangle pull-right low-alert"></i></button>
@@ -75,43 +75,54 @@
     <div class="data-vis col-sm-9">
       <img src="images/drawing.png" alt="graphs" width="1000px" height="auto">
     </div>
-  </row
+        <div class="col-sm-3 pull-left">
+      <table class="table">
+        <tr class="primary">
+          <td>Appliance</td>
+          <td>Life Meter</td>
+          <td></td>
+        </tr>
+        <tr class="">
+          <td>Kenmore Refrigerator</td>
+          <td>5.4 years</td>
+          <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
+        </tr>
+        <tr class="">
+          <td>Maytag Washer</td>
+          <td>3.2 years</td>      
+          <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
+        </tr>
+        <tr class="">
+          <td>Maytag Dryer</td>
+          <td>3.2 years</td>   
+          <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
+        </tr>
+        <tr class="">
+          <td>Whirlpool Water Heater</td>
+          <td>8.9 years</td>   
+          <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
+        </tr>
+        <tr class="">
+          <td>Kenmore Air Conditioner</td>
+          <td>8.9 years</td>   
+          <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
+        </tr>
+      </table>
+    </div>
+    
+  </row>
+  <row>
+    <ul class="col-sm-9 list-group">
+      <li class="list-group-item primary">Tips</li>
+      <li class="list-group-item">Replace your air conditioning filters every 90 days for cleaner air and lower bills</li>
+      <li class="list-group-item">Bay Area water agencies offer free water use inspections. An expert will come to your house check for leaks. Contact john@hetchhetchy.com to set up an appointment.</li>
+      <li class="list-group-item">Save 38 gallons of water per day by upgrading one toilet. You'll even receive a rebate! Show me how</li>
+      <li class="list-group-item">Save 832 gallons of water and $50 in electricity per year if you upgrade your washing machine. With no money down! Show me how.</li>
+      <li class="list-group-item">Always wash with cold water, laundry detergent works just as well, and you’ll save 40 cents per load
+    </li>
+    </ul>
+  </row>
 </container>
-
-<div class="col-sm-9 pull-right">
-  <table class="table">
-    <tr class="success">
-      <td>Appliance</td>
-      <td>Life Meter</td>
-      <td></td>
-    </tr>
-    <tr class="">
-      <td>Kenmore Refrigerator</td>
-      <td>5.4 years</td>
-      <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
-    </tr>
-    <tr class="">
-      <td>Maytag Washer</td>
-      <td>3.2 years</td>      
-      <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
-    </tr>
-    <tr class="">
-      <td>Maytag Dryer</td>
-      <td>3.2 years</td>   
-      <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
-    </tr>
-    <tr class="">
-      <td>Whirlpool Water Heater</td>
-      <td>8.9 years</td>   
-      <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
-    </tr>
-    <tr class="">
-      <td>Kenmore Air Conditioner</td>
-      <td>8.9 years</td>   
-      <td><i class="fa fa-2x fa-arrow-circle-right pull-right"></i></td>
-    </tr>
-  </table>
-</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
