--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>KeenCasa</title>
 
     <!-- Bootstrap -->
+   <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Concert+One' rel='stylesheet' type='text/css'>
+    <style>
+      .landing-wrapper{
+        text-align:center;
+      }
+      .landing-wrapper img{
+        display:inline-block;
+        width:100%;
+        max-width:289px;
+      }
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,79 +31,17 @@
     <![endif]-->
   </head>
   <body>
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Keen Casa</a>
+    <div>
+
+    </div>
+    <div class="landing-wrapper">
+      <img src="images/logo-big.png" style="max-width:500px;"/>
+      <br/>
+      <img src="images/landing.png"/>
+      <h1>Welcome Back Susan!</h1>
+      <p><a class="btn btn-primary btn-lg" role="button" href="dashboard.html">Login</a></p>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-      </form>
-    
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<div class="jumbotron">
-  <h1>Looking Good!</h1>
-</div>
-<div class="panel panel-default col-sm-3 pull-left">
-  <!-- Default panel contents -->
-  <div class="panel-heading">Alerts</div>
-  <!-- List group -->
-  <ul class="list-group">
-    <li class="list-group-item">Replace you water filter</li>
-    <li class="list-group-item">Replace lightbulb in refrigerator</li>
-    <li class="list-group-item">You have a leak</li>
-    <li class="list-group-item">Unusually high water usage</li>
-  </ul>
-</div>
-<div class="data-vis col-sm-9">
-</div>
-<div class="panel panel-default col-sm-9 pull-right">
-  <!-- Default panel contents -->
-  <div class="panel-heading">My Appliances</div>
-  <!-- List group -->
-  <ul class="list-group">
-    <li class="list-group-item">Whirlpool Dishwasher</li>
-    <li class="list-group-item">Kenmore Refrigerator</li>
-    <li class="list-group-item">Maytag Washer</li>
-    <li class="list-group-item">Maytag Dryer</li>
-    <li class="list-group-item">Whirlpool Water Heater</li>
-  </ul>
-</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
