update profile picture to Elena

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       .landing-wrapper img{
         display:inline-block;
         width:100%;
-        max-width:289px;
+        max-width:300px;
       }
     </style>
 
@@ -38,7 +38,7 @@
       <img src="images/logo-big.png" style="max-width:500px;"/>
       <br/>
       <img src="images/landing.png"/>
-      <h1>Welcome Back Susan!</h1>
+      <h1>Welcome Back Elena!</h1>
       <p><a class="btn btn-primary btn-lg" role="button" href="dashboard.html">Login</a></p>
     </div>
 
