--- a/dashboard.html
+++ b/dashboard.html
@@ -19,8 +19,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+<body>
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -31,37 +31,26 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="images/logo.png" width="auto" height="70px"</a>
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="auto" height="70px"</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
+        <li class=""><a href="dashboard.html">Home</a></li>
+        <li><a href="products.html">Shop</a></li>
         </li>
       </ul>
       <img class="pull-right avatar" src="images/avatar.png" width="80px" height="80px">
-      <h3 class="pull-right">Susan's Account</h3>
+      <h3 class="pull-right">Elena's Account</h3>
     
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
 <div class="jumbotron">
-  <h2>Welcome Back Susan!</h2>
-  <h1>Everything is Working!</h1>
+  <h2 style="color:#ffffff;">Welcome Back Elena!</h2>
+  <h1 style="color:#ffffff;">Everything is Working!</h1>
 </div>
 <container>
   <row>
@@ -73,10 +62,10 @@
     </div>
 
     <div class="data-vis col-sm-9">
-      <img src="images/drawing.png" alt="graphs" width="1000px" height="auto">
+      <img src="images/drawing.png" alt="graphs" width="900px" height="auto">
     </div>
         <div class="col-sm-3 pull-left">
-      <table class="table">
+      <table class="table dashboard">
         <tr class="primary">
           <td>Appliance</td>
           <td>Life Meter</td>
