--- a/dashboard.html
+++ b/dashboard.html
@@ -49,7 +49,7 @@
 </nav>
 
 <div class="jumbotron">
-  <h2 style="color:#ffffff;">Welcome Back Elena!</h2>
+  <h2 style="color:#ffffff;margin-top:0px;">Welcome Back Elena</h2>
   <h1 style="color:#ffffff;">Everything is Working!</h1>
 </div>
 <container>
