added recommendations to homepage

--- a/dashboard.html
+++ b/dashboard.html
@@ -112,6 +112,42 @@
     </ul>
   </row>
 </container>
+<container>
+  <row>
+      <h2 class="center-block" style="margin-left:360px;">Recommended Washing Machines</h2>
+      <div class="center-block">
+      <table class="table upgrade" style="margin-left:360px;width:600px;">
+          <tr class="">
+            <td class="col-xs-2"><img src="images/washing-machine1.png" height="100px"></td>
+            <td class="col-xs-4"> 
+              <p class="">Kenmore Z9984 Washing Machine</p>
+              <button class="upgrade">Upgrade</button>
+            </td>
+            <td class="savings col-xs-3">Lifetime<br/>$600</td>
+            <td class="score col-xs-3">Score<br/>+30</td>
+         </tr>
+         <tr class="">
+            <td class="col-xs-2"><img src="images/washing-machine2.png" height="100px"></td>
+            <td class="col-xs-4"> 
+              <p class="">Sears R555-3 Washing Machine</p>
+              <button class="upgrade">Upgrade</button>
+            </td>
+            <td class="savings col-xs-3">Lifetime<br/>$550</td>
+            <td class="score col-xs-3">Score<br/>+27</td>
+         </tr>
+         <tr class="">
+            <td class="col-xs-2"><img src="images/washing-machine3.png" height="100px"></td>
+            <td class="col-xs-4"> 
+              <p class="">Whirlpool A353 Washing Machine</p>
+              <button class="upgrade">Upgrade</button>
+            </td>
+            <td class="savings col-xs-3">Lifetime<br/>$650</td>
+            <td class="score col-xs-3">Score<br/>+25</td>
+         </tr>
+      </table>
+    </div>
+  </row>
+</container>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
