--- a/products.html
+++ b/products.html
@@ -48,11 +48,10 @@
   </div><!-- /.container-fluid -->
 </nav>
 <container>
-    </div>
+  <row>
     <h2 class="center-block">Recommended Washing Machines</h2>
       <div class="center-block">
       <table class="table upgrade">
-      
           <tr class="">
             <td class="col-xs-2"><img src="images/washing-machine1.png"></td>
             <td class="col-xs-4"> 
@@ -80,7 +79,6 @@
             <td class="savings col-xs-3">$600</td>
             <td class="score col-xs-3">+30</td>
          </tr>
-        
       </table>
     </div>
   </row>
