fixed buttons on upgrades

--- a/dashboard.html
+++ b/dashboard.html
@@ -121,7 +121,7 @@
             <td class="col-xs-2"><img src="images/washing-machine1.png" height="100px"></td>
             <td class="col-xs-4"> 
               <p class="">Kenmore Z9984 Washing Machine</p>
-              <button class="upgrade">Upgrade</button>
+              <a class="btn btn-primary btn-lg">Upgrade</a>
             </td>
             <td class="savings col-xs-3">Lifetime<br/>$600</td>
             <td class="score col-xs-3">Score<br/>+30</td>
@@ -130,7 +130,7 @@
             <td class="col-xs-2"><img src="images/washing-machine2.png" height="100px"></td>
             <td class="col-xs-4"> 
               <p class="">Sears R555-3 Washing Machine</p>
-              <button class="upgrade">Upgrade</button>
+              <a class="btn btn-primary btn-lg">Upgrade</a>
             </td>
             <td class="savings col-xs-3">Lifetime<br/>$550</td>
             <td class="score col-xs-3">Score<br/>+27</td>
@@ -139,7 +139,7 @@
             <td class="col-xs-2"><img src="images/washing-machine3.png" height="100px"></td>
             <td class="col-xs-4"> 
               <p class="">Whirlpool A353 Washing Machine</p>
-              <button class="upgrade">Upgrade</button>
+              <a class="btn btn-primary btn-lg">Upgrade</a>
             </td>
             <td class="savings col-xs-3">Lifetime<br/>$650</td>
             <td class="score col-xs-3">Score<br/>+25</td>
